Fixed things that broke

--- a/src/components/View/View.scss
+++ b/src/components/View/View.scss
@@ -12,7 +12,7 @@
   width: 100%;
   -webkit-overflow-scrolling: touch;
 
-  &__inner {
+  &__child {
     overflow-x: hidden;
     overflow-y: auto;
     max-height: 100%;
