Next case study improvements

--- a/src/components/CaseStudyCover/CaseStudyCover.scss
+++ b/src/components/CaseStudyCover/CaseStudyCover.scss
@@ -17,7 +17,7 @@
 
 .casestudy__header {
   left: 0;
-  padding-top: calc(4em + 8vw);
+  padding-top: 160px;
   position: absolute;
   top: 0;
   z-index: 40;
