--- a/src/components/View/View.scss
+++ b/src/components/View/View.scss
@@ -4,20 +4,14 @@
   left: 0;
   top: 0;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
+  position: fixed;
   max-height: 100%;
   height: 100%;
   transition: transform 600ms cubic-bezier(0, 0, .2, 1);
   will-change: transform;
   width: 100%;
   -webkit-overflow-scrolling: touch;
-
-  &__child {
-    overflow-x: hidden;
-    overflow-y: auto;
-    max-height: 100%;
-    height: 100%;
-  }
 
   &:not(.-is-active) {
     pointer-events: none;
@@ -37,13 +31,11 @@
 
 /* Sidebars */
 .view--aside {
-  position: fixed;
   z-index: 10;
 }
 
 /* VIEWS */
 .root {
-  position: relative;
   z-index: 20;
   height: 100%;
 }
