Hover shows prismic toolbar

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -43,6 +43,9 @@ img {
 
 #io-prismic-toolbar {
   transform: translateX(-97%);
-  opacity: .2 !important;
-  transition: transform cubic-bezier(0.25, 0.1, 0.25, 1) 200ms,opacity cubic-bezier(0.25, 0.1, 0.25, 1) 200ms;
+  transition: transform cubic-bezier(.25, .1, .25, 1) 200ms;
+
+  &:hover {
+    transform: translateX(0%);
+  }
 }
