--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -3,8 +3,7 @@
   height: 100vh;
   position: relative;
   z-index: 40;
-  overflow-y: scroll;
-
+  overflow: hidden;
   // &__notFound {
   //   position: absolute;
   //   top: 50%;
