--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -38,6 +38,7 @@
   &--next {
     z-index: 10;
     pointer-events: none;
+    position: fixed;
 
     .casestudy__header__item {
       transform: translateY(calc(100vh - 160px - 200px));
