--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -4,17 +4,15 @@
   position: relative;
   z-index: 40;
   overflow: hidden;
-  // &__notFound {
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  // }
+
 
   &__inner {
-    height: calc(100vh - 2em - 2vw);
-    width: calc(100vw - 2em - 2vw);
-    margin: calc(4em - 4vw);
+    height: calc(100vh - 4em);
+    width: calc(100vw - 4em);
+    margin: 0px auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     overflow: hidden;
 
     &__video,
