--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .homepage {
   width: 100vw;
   height: 100vh;
@@ -5,6 +7,9 @@
   z-index: 40;
   overflow: hidden;
 
+  &.-isAnimating {
+    animation: slideUpHome $ease-standard 600ms;
+  }
 
   &__inner {
     height: calc(100vh - 4em);
