--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -14,7 +14,7 @@
   &__inner {
     height: calc(100vh - 4em);
     width: calc(100vw - 4em);
-    margin: 0px auto;
+    margin: 0 auto;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
