--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -83,12 +83,18 @@
   }
 
   &__shim {
+    position: relative;
+    top: 0;
+    left: 0;
     display: block;
     height: 400px;
-    position: relative;
     width: 100%;
-    z-index: 300;
+    z-index: 100;
     cursor: pointer;
+
+    &.-isHome {
+      position: fixed;
+    }
   }
 
   &__block {
