Improved scroll performance

--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -115,6 +115,7 @@
   }
 
   &__body {
+    transform: translateZ(0);
     background: $case-study-bg;
     padding-bottom: $margin-1;
     position: relative;
