--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/breakpoints.scss';
 
 .homepage {
   width: 100vw;
@@ -12,13 +13,18 @@
   }
 
   &__inner {
-    height: calc(100vh - 4em);
-    width: calc(100vw - 4em);
+    height: calc(100vh - #{$nav-padding});
+    width: calc(100vw - #{$nav-padding});
     margin: 0 auto;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     overflow: hidden;
+
+    @include breakpoint(xs) {
+      height: calc(100vh - #{$nav-padding-xs});
+      width: calc(100vw - #{$nav-padding-xs});
+    }
 
     &__video,
     .homepage__inner__image {
