--- a/src/containers/CaseStudy/slices/Diptych/Diptych.scss
+++ b/src/containers/CaseStudy/slices/Diptych/Diptych.scss
@@ -1,7 +1,14 @@
+@import 'styles/breakpoints.scss';
+
 .casestudy__diptych__item {
   flex-basis: 50%;
 
   & > img {
     width: 100%;
+
+    @include breakpoint(xs) {
+      transform: none!important;
+    }
+
   }
 }
