--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -18,4 +18,13 @@
     color: #575757;
     text-decoration: none;
   }
+
+  h3 {
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .about__h3 {
+    padding-bottom: 60px;
+  }
 }
