Fixed duration and progress

--- a/src/components/VideoNode/VideoControls/VideoControls.scss
+++ b/src/components/VideoNode/VideoControls/VideoControls.scss
@@ -76,6 +76,7 @@
     &--progress__fill {
       height: inherit;
       background: $color-secondary;
+      transition: width 1s linear;
     }
   }
 }
