Hide hidden nav hovers

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -24,12 +24,14 @@
   &.-view-is-about {
     .icon--grid {
       opacity: 0; // hide 'work' link when view is 'about'
+      visibility: hidden;
     }
   }
 
   &.-view-is-work {
     .icon--about {
       opacity: 0; // hide 'about' link when view is 'work'
+      visibility: hidden;
     }
   }
 
