--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -3,14 +3,14 @@
 body {
   color: #111;
   font-family: 'calibre-light', arial, sans-serif;
-  font-size: 16px;
+  font-size: 19px;
   line-height: 2.25;
   font-stretch: normal;
   font-style: normal;
   overflow: hidden;
 
   @include breakpoint (sm) {
-    font-size: 18px;
+    font-size: 17.5px;
   }
   @include breakpoint (md) {
     font-size: 20px;
@@ -31,9 +31,13 @@ em,
 
 h1,
 .h1 {
-  font-size: 2em;
-  line-height: 1;
+  font-size: 1.7em;
+  line-height: 1.25;
   font-family: 'calibre-light';
+
+  @include breakpoint (xs) {
+    font-size: 1.4em;
+  }
 }
 
 h2,
