--- a/src/components/WaypointAnim/WaypointAnim.scss
+++ b/src/components/WaypointAnim/WaypointAnim.scss
@@ -1,9 +1,15 @@
+@import '../../styles/variables.scss';
+
 .-waypointAnim {
   &--fadeIn {
     opacity: 0;
+    transform: translate3d(0, 90px, 0);
+    transition: 900ms opacity $ease-decel, 1200ms transform $ease-decel;
+
 
     &.-enabled {
       opacity: 1;
+      transform: translate3d(0, 0, 0);
     }
   }
 }
