--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -22,24 +22,24 @@
 }
 
 .casestudy {
-
-  &.-isHome {
-    // height: 400px;
-    // overflow: hidden;
-
-    // &.-isAnimating {
-    //   animation: slideUpHome 600ms $ease-standard;
-    //   height: 100vh;
-    // }
-
-    .casestudy__header__item {
-      opacity: 0;
-
-      &--title {
-        opacity: 1;
-      }
-    }
-  }
+//
+//   &.-isHome {
+//     // height: 400px;
+//     // overflow: hidden;
+//
+//     // &.-isAnimating {
+//     //   animation: slideUpHome 600ms $ease-standard;
+//     //   height: 100vh;
+//     // }
+//
+//     .casestudy__header__item {
+//       opacity: 0;
+//
+//       &--title {
+//         opacity: 1;
+//       }
+//     }
+//   }
 
 
   .casestudy__header__item {
