--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -59,7 +59,9 @@
   &__item--svg {
     position: absolute;
     z-index: 50;
-    width: 50% !important;
+    width: 70% !important;
+    height: 50% !important;
+    object-fit: contain;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
