--- a/src/containers/About/slices/Conclusion/Conclusion.scss
+++ b/src/containers/About/slices/Conclusion/Conclusion.scss
@@ -1,12 +1,19 @@
 .about__conclusion {
   &__inner {
-    >div {
+    > div {
       margin: 1em 0;
     }
   }
 
+  img {
+    margin: 1rem auto;
+    max-width: 3rem;
+    display: block;
+    opacity: 0.25;
+  }
+
   &__scrollUp {
-    $skew: .7;
+    $skew: 0.7;
     width: 10px;
     height: 10px;
     margin: 0px auto;
